--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -31,7 +31,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>Nu Kenzievp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
